# ChangeLog for media-video/mkvtoolnix
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/ChangeLog,v 1.124 2010/02/24 20:04:17 ssuominen Exp $

  24 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  mkvtoolnix-2.9.9.ebuild, mkvtoolnix-3.0.0.ebuild, mkvtoolnix-3.1.0.ebuild,
  mkvtoolnix-3.2.0.ebuild:
  Rename USE wxwindows to wxwidgets wrt #306277.

*mkvtoolnix-3.2.0 (14 Feb 2010)

  14 Feb 2010; Steve Dibb <beandog@gentoo.org> +mkvtoolnix-3.2.0.ebuild:
  Version bump

*mkvtoolnix-3.1.0 (25 Jan 2010)

  25 Jan 2010; Alexis Ballier <aballier@gentoo.org>
  +mkvtoolnix-3.1.0.ebuild:
  version bump

  20 Jan 2010; Markus Meier <maekke@gentoo.org> mkvtoolnix-2.9.9.ebuild:
  amd64/x86 stable, bug #299993

  12 Jan 2010; nixnut <nixnut@gentoo.org> mkvtoolnix-2.9.9.ebuild:
  ppc stable #299993

*mkvtoolnix-3.0.0 (07 Jan 2010)

  07 Jan 2010; Steve Dibb <beandog@gentoo.org> +mkvtoolnix-3.0.0.ebuild:
  Version bump

*mkvtoolnix-2.9.9 (26 Nov 2009)

  26 Nov 2009; Steve Dibb <beandog@gentoo.org> +mkvtoolnix-2.9.9.ebuild:
  Version bump

  24 Nov 2009; Steve Dibb <beandog@gentoo.org> mkvtoolnix-2.9.7.ebuild:
  amd64 stable, bug 281448

  27 Sep 2009; Mounir Lamouri <volkmar@gentoo.org> mkvtoolnix-2.9.7.ebuild:
  Stable for ppc. Bug 281448

  22 Sep 2009; Alexis Ballier <aballier@gentoo.org> mkvtoolnix-2.9.8.ebuild:
  Do not try to guess boost_regex version, let the eselected version be
  used.

  03 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  mkvtoolnix-2.9.7.ebuild:
  stable x86, bug 281448

  14 Aug 2009; Steve Dibb <beandog@gentoo.org> mkvtoolnix-2.4.0.ebuild,
  mkvtoolnix-2.9.5.ebuild, mkvtoolnix-2.9.7.ebuild:
  Fix documentationan install

*mkvtoolnix-2.9.8 (14 Aug 2009)

  14 Aug 2009; Steve Dibb <beandog@gentoo.org> +mkvtoolnix-2.9.8.ebuild:
  Version bump

*mkvtoolnix-2.9.7 (13 Jul 2009)

  13 Jul 2009; Alexis Ballier <aballier@gentoo.org>
  +mkvtoolnix-2.9.7.ebuild:
  version bump
