@@ -1,6 +1,16 @@
 # ChangeLog for media-video/mkvtoolnix
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/ChangeLog,v 1.124 2010/02/24 20:04:17 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mkvtoolnix/ChangeLog,v 1.126 2010/03/25 13:51:53 beandog Exp $
+
+*mkvtoolnix-3.3.0 (25 Mar 2010)
+
+  25 Mar 2010; Steve Dibb <beandog@gentoo.org> +mkvtoolnix-3.3.0.ebuild:
+  Version bump
+
+  18 Mar 2010; Dror Levin <spatz@gentoo.org> -mkvtoolnix-3.0.0.ebuild,
+  -mkvtoolnix-3.1.0.ebuild, mkvtoolnix-3.2.0.ebuild:
+  Add doc USE flag, fix html documentation installation (path moved), install
+  missing manpage, properly die on failure. Remove old.
 
   24 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
   mkvtoolnix-2.9.9.ebuild, mkvtoolnix-3.0.0.ebuild, mkvtoolnix-3.1.0.ebuild,
